--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "scripts": {
     "start": "yarn parcel src/index.html",
-    "build": "yarn parcel build src/index.html",
-    "test": "jest"
+    "build": "rimraf ./dist/**/* && yarn parcel build src/index.html",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -40,13 +42,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-loader": "^8.2.3",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.3.1",
     "parcel": "^2.0.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7"
   }
 }
